[tool.poetry]
name = "sentry_test"
version = "0.1.0"
description = ""
authors = ["Kapustin Alexander <akapustin@ambrahealth.com>"]

[tool.poetry.dependencies]
python = "^3.9"
sentry-sdk = {extras = ["flask"], version = "^1.0.0"}
Flask = "^1.1.2"
dynaconf = "^3.1.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
